# HappyFaceLA

./: .dev.vars.example  .env.example  .gitignore  .stripe.txt  AGENTS.md  CLAUDE.md  CODEX.md  Developer Agent.code-workspace  PROJECT_ROADMAP.md  README.md  astro.config.mjs  audit.ps1  auditor_agent.py  builder_agent.py  escaped_prompt.txt  package-lock.json  package.json  phaseB.txt  phaseC1.txt  phaseC2.txt  phaseC4.txt  pyproject.toml  run_test_harness.py  task.txt  test_mailbox_state_machine.py  tsconfig.json  wrangler.toml
.github/: pull_request_template.md
PICS/: (5) Instagram.html
agents/: continuous_builder.py  mailbox.py
artifacts/: google_ads_audit_dec_ads_004.json  google_ads_change_events_7d_dec_ads_004.json  google_ads_change_events_dec_ads_004.json  google_ads_final_launch_state_2026-05-31.json  google_ads_final_qa_dec_ads_004_operator.json  google_ads_final_qa_dec_ads_004_post_remediation.json  google_ads_launch_confirmation_live_2026-05-31.json  google_ads_launch_enable_and_verify_2026-05-31.json  google_ads_policy_status_monitoring_readonly_2026-05-31_refresh.json  google_ads_policy_status_verification_readonly_2026-05-31.json  google_ads_policy_status_verification_readonly_final_2026-05-31.json  google_ads_post_launch_serving_correction_2026-05-31.json  google_ads_setup_audit_after_build.json
config/: column_mappings.yaml  documents.yaml  drive_structure.yaml  governance_workbook.yaml  restricted_operations_workbook.yaml  rule_schema.yaml  validation_lists.yaml
docs/: ARCHITECTURE_DECISION_RECORD.md  BRANCH_PROTECTION.md  RELEASE_GOVERNANCE.md  (+21 more)
(+849 files in other folders)
